--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,481 @@ body {
   min-height: 100vh;
   background-color: #fff;
   font-family: sans-serif;
+  font-family: 'Livvic', sans-serif;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1150px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.site-hero {
+  background-color: #014E56;
+}
+
+.site-header {
+  padding-top: 45px;
+  position: relative;
+  overflow: hidden;
+}
+
+.site-header::before {
+  content: '';
+  background-image: url("../img/about-head.svg");
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  right: -100px;
+  background-repeat: no-repeat;
+}
+
+.site-header__logo {
+  width: 135px;
+  height: 38px;
+  margin-right: 80px;
+}
+.nav__list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.nav__item:not(:last-child) {
+  margin-right: 40px; 
+}
+.nav__link {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.site-header__btn {
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  padding: 10px 32px;
+  background: transparent;
+  box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
+  border-radius: 24px;
+  color: #fff;
+  border: 2px solid #fff;
+  transition: background-color 0.4s ease,
+              color 0.4s ease;
+}
+
+.site-header__btn:hover {
+  background:#fff;
+  color: #014E56;
+  border-color: transparent;
+}
+
+.site-header__icon {
+  display: none;
+}
+
+.site-hero__sec {
+  position: relative;
+}
+
+.site-hero__des {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding: 120px 0;
+}
+
+.site-hero__title {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 100px;
+  color: #FFFFFF;
+  margin: 0;
+}
+
+.site-hero__text {
+  position: relative;
+  width: 730px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+  color: #FFFFFF;
+  margin-top: 24px;
+}
+
+.site-hero__line {
+  width: 50px;
+  height: 4px;
+  background-color: #F67E7E;
+  display: inline-block;
+  position: absolute;
+  top: -40px;
+  left: 0;
+}
+
+.directors {
+  padding: 140px 0;
+  position: relative;
+  background: #004047;
+  overflow: hidden;
+}
+
+.directors::before {
+  content: '';
+  background-image: url("../img/top-img.png");
+  width: 200px;
+  height: 200px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0px;
+}
+
+.directors::after {
+  content: '';
+  background-image: url("../img/bottom-img.png");
+  width: 142px;
+  height: 100px;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.directors__title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.directors__list {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 76px 30px;
+}
+
+.directors__item {
+  position: relative;
+  align-items: center;
+  width: 350px;
+  background: #012F34;
+  padding: 32px 24px 56px 32px;
+}
+
+.directors__img {
+  margin: 0 auto;
+  display: flex;
+}
+
+.directors__text-green {
+  font-weight: bold;
+  font-size: 18px;    
+  line-height: 28px;
+  text-align: center;
+  color: #79C8C7;
+  margin: 0;
+  margin-top: 16px;
+}
+
+.directors__text {
+  font-style: italic;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0;
+}
+
+.directors__btn {
+  font-weight: bold;
+  border:none;
+  background: #F67E7E;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  font-size: 30px;
+  align-items: center;
+  padding-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+
+.directors-inner__list {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 0 auto;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+.subtext {
+  font-style: normal;
+}
+
+.btn-green {
+  background: #79C8C7;
+  transform: translate(-50%, 50%) rotateZ(45deg);
+}
+
+.inner__item .bx {
+  font-size: 24px;
+  color: #FFFFFF;
+  margin: 0 8px;
+}
+
+.client {
+  position: relative;
+  background-color: #012F34;
+  padding: 140px 0;
+  overflow: hidden;
+}
+
+.client::before {
+  content:"";
+  background-image: url("../img/client-img.svg");
+  width: 200px;
+  height: 200px;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.client__title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0;
+  margin-bottom: 70px;
+}
+
+.client__list {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  justify-content: space-between;
+}
+
+.contact {
+  background-color: #F67E7E;
+  padding: 76px 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.contact::before {
+  content: "";
+  background-image: url("../img/contact-img.png");
+  width: 200px;
+  height: 244px;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0;
+  bottom: -100px;
+}
+
+.contact__sec {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact__title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 48px;
+  color: #012F34;
+}
+
+.contact-btn {
+  background-color: transparent;
+  color: #012F34;
+  border-color: #004047;
+
+}
+
+.contact-btn:hover {
+  background-color: #012F34;
+  border-color: #012F34;
+  color: #F67E7E;
+}
+
+/* media */
+
+@media screen and (max-width:395px){
+  .container {
+    max-width: 355px;
+  }
+ 
+  .site-header__nav,
+  .site-header__btn {
+    display: none;
+  }
+
+
+  .site-header::before {
+    background-image: url("../img/about-head.svg");
+    position: absolute;
+    bottom: -100px;
+    right: -100px;
+  }
+
+  .site-header__icon {
+    display: block;
+  }
+  .icon__btn {
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .site-hero__des {
+    text-align: center;
+    justify-content: center;
+    padding: 80px 0 108px 0;
+  }
+
+  .site-hero__title {
+    width: 100%;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 40px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
+  .site-hero__text {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 28px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
+  .site-hero__line {
+    display: none;
+  }
+
+  .directors {
+    padding: 88px 0 116px 0;
+  }
+
+  .directors::before {
+    position: absolute;
+    top: -100px;
+  }
+  
+  .directors::after {
+    content: '';
+    background-image: url("../img/bottom-img.png");
+    width: 142px;
+    height: 100px;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  
+
+  .directors__list {
+    grid-template-columns: repeat(1, 327px);
+  }
+
+  .directors__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  .directors__item {
+    width: 320px;
+  }
+
+  .client {
+    padding: 88px 0;
+  }
+  
+  .client::before {
+    background-repeat: no-repeat;
+    position: absolute;
+    top: -100px;
+    left: -100px;
+  }
+  
+  .client__title {
+    font-size: 32px;
+    line-height: 32px;
+  }
+  
+  .client__list {
+    display: grid;
+    grid-template-columns: repeat(1, auto);
+    grid-gap: 64px 0;
+    justify-content: center;
+  }
+
+  .client__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .contact {
+    background-color: #F67E7E;
+    padding: 83px 0;
+  }
+  
+  .contact-btn {
+    display: flex;
+    justify-content: center;
+  }
+
+  .contact::before {
+    bottom: -122px;
+  }
+
+  .contact__sec {
+    text-align: center;
+    justify-content: center;
+  }
+  
+  .contact__title {
+    font-size: 32px;
+    line-height: 32px;
+    color: #012F34;
+  }
 }
